# ipc-task

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  all.h  channel.cpp  channel.h  environment.cpp  environment.h  log.cpp  log.h  ring_buffer_allocator.cpp  ring_buffer_allocator.h  shared_memory.cpp  shared_memory.h  shared_resource.cpp  shared_resource.h  string_list.cpp  string_list.h  string_list_view.cpp  string_list_view.h  trie.h  unlink_guard.cpp  unlink_guard.h
reader/: CMakeLists.txt  reader.cpp
tests/: CMakeLists.txt  string_list_view_test_helper.h  test_linear_allocator.cpp  test_ring_buffer_allocator.cpp  test_string_list.cpp  test_string_list_view.cpp  test_trie.cpp
writer/: CMakeLists.txt  writer.cpp
